--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.panya.weather"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -17,7 +17,14 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'String', 'BASE_URL_WEATHER', '"https://api.openweathermap.org"'
+            buildConfigField 'String', 'APP_ID', '"d4c78dcd77abecde400779c9c026e6bb"'
+        }
         release {
+            buildConfigField 'String', 'BASE_URL_WEATHER', '"https://api.openweathermap.org"'
+            buildConfigField 'String', 'APP_ID', '"d4c78dcd77abecde400779c9c026e6bb"'
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -29,8 +36,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
+ext {
+    koin_version = "3.3.2"
+    mockkVersion = "1.12.0"
+}
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -40,4 +55,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
+
+    implementation "io.insert-koin:koin-android:$koin_version"
+
+    testImplementation "io.mockk:mockk:1.13.4"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+
 }
